an application that track the daily progress of an organization or team

--- a/src/main/resources/templates/forms/login.html
+++ b/src/main/resources/templates/forms/login.html
@@ -66,8 +66,8 @@
         </div>
 
         <div class="card-footer">
-            <div class="row justify-content-start">
-                <div class="col-12 col-md-3 col-sm-6 my-2">Demo accounts:</div>
+            <div hidden class="row justify-content-start">
+                <div hidden class="col-12 col-md-3 col-sm-6 my-2">Demo accounts:</div>
 
                 <div class="col-12 col-md-3 col-sm-6">
                     <input type="submit" value="manager - admin" class="btn btn-secondary btn-block my-2"
