--- a/src/main/resources/templates/views/about.html
+++ b/src/main/resources/templates/views/about.html
@@ -21,14 +21,14 @@
     <ul>
         <li>Spring Boot</li>
         <li>Spring Security</li>
-        <li>H2 database</li>
+        <li >Mysql database</li>
         <li>Maven</li>
         <li>Thymeleaf</li>
         <li>Bootstrap</li>
         <li>jQuery</li>
     </ul>
 
-    <p>Code: <a href="https://github.com/rengreen/task-manager">github.com/rengreen/task-manager</a></p>
+    <p hidden>Code: <a href="https://github.com/rengreen/task-manager">github.com/rengreen/task-manager</a></p>
 
 </main>
 
