--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,14 +18,14 @@
     <hr class="my-4">
     <p>Most features require logging in. Not authorized users have access to the welcome screen and login or registration panel.</p>
 
-    <p>Admin (manager) can:</p>
-    <ul>
+    <p hidden>Admin (manager) can:</p>
+    <ul hidden>
         <li>Create task and assign task to any user</li>
         <li>View list of all users with possibility to delete user</li>
         <li>View list of all tasks with editing or deleting task</li>
     </ul>
-        <p>Common user (employee) can:</p>
-    <ul>
+        <p hidden>Common user (employee) can:</p>
+    <ul hidden>
         <li>Create task only for himself</li>
         <li>View list of all users with no action allowed</li>
         <li>View list of all tasks but edit or delete only tasks for which he is responsible</li>
@@ -38,8 +38,8 @@
 
     </ul>
 
-    <h2 class="my-second-header">Test users:</h2>
-    <ul>
+    <h2 hidden class="my-second-header">Test users:</h2>
+    <ul hidden>
         <li>manager@mail.com, password: 112233</li>
         <li>ann@mail.com, password: 112233</li>
         <li>mark@mail.com, password: 112233</li>
